Adding edit content edpoint
