# cmd/api/server/route.go
@@ -12,6 +12,8 @@ func (a *Api) setupRoutes() {
 
 	a.router.HandleFunc("POST /api/v1/users/register", a.handleRegister)
 	a.router.HandleFunc("POST /api/v1/users/login", a.handleLogin)
+
 	a.router.HandleFunc("POST /api/v1/contents/write-down", a.AuthTokenMiddleware(a.handleWriteDown))
 	a.router.HandleFunc("GET /api/v1/contents/feed", a.AuthTokenMiddleware(a.handleFeed))
+	a.router.HandleFunc("PUT /api/v1/contents/{id}", a.AuthTokenMiddleware(a.handleContentEdit))
 }
